--- a/404.html
+++ b/404.html
@@ -1,2 +1,7 @@
-oh looks like its the end of the road
-(404 error) page not found
+<html>
+  <head></head>
+  <body>
+    <p>oh looks like its the end of the road</p><br>
+    <p>(404 error) page not found</p>
+  </body>
+</html>
