--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 		<title>Home - Roblokis</title>
 		<link rel="shortcut icon" type="image/jpg" href="images/icons/icon_300x300.png"/>
 
+		<meta property="og:url" content="https://chrome.google.com/webstore/detail/roblokis/olofnhaecbnacbmgcknhcnacnffepkij?hl=en">
+		<meta property="og:type" content="website">
+		<meta property="og:title" content="Roblokis | A Roblox Extension">
+		<meta property="og:description" content="Roblokis is a chrome extension to make roblox better">
+		<meta property="og:image" content="images/icons/icon_300x300.png">
+
 		<style type="text/css">
 			body {
 				background-color: lightblue;
@@ -111,7 +117,7 @@
 			<div class="panel">
 				<div>Is it Open Source</div>
 				<div>
-					Robloxkis isn't Open Source for now, But im planning to make it Open Source!
+					Roblokis isn't Open Source for now, But im planning to make it Open Source!
 				</div>
 			</div>
 
