--- a/index.html
+++ b/index.html
@@ -4,10 +4,49 @@
 		<link rel="shortcut icon" type="image/jpg" href="images/icons/icon_300x300.png"/>
 
 		<meta property="og:url" content="https://chrome.google.com/webstore/detail/roblokis/olofnhaecbnacbmgcknhcnacnffepkij?hl=en">
+		<meta name="twitter:url" content="https://chrome.google.com/webstore/detail/roblokis/olofnhaecbnacbmgcknhcnacnffepkij?hl=en">
+
+		<meta property="og:site_name" content="Roblokis" />
+		<meta name="twitter:site" content="Roblokis">
+
 		<meta property="og:type" content="website">
+		<meta name="keywords" content="Roblokis, Roblox Extension, New Roblox Extension">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+		<meta name="author" content="Ameer!">
+		<meta name="theme-color" content="rgba(33,33,33,0.98)">
+
 		<meta property="og:title" content="Roblokis | A Roblox Extension">
+		<meta name="twitter:title" content="Roblokis | A Roblox Extension">
+
+		<meta name="twitter:description" content="Roblokis is a chrome extension to make roblox better">
 		<meta property="og:description" content="Roblokis is a chrome extension to make roblox better">
-		<meta property="og:image" content="images/icons/icon_300x300.png">
+		<meta name="description" content="Roblokis is a chrome extension to make roblox better">
+
+		<meta name="twitter:image" content="https://ameerdotexe.github.io/Roblokis/images/icons/icon_300x300.png">
+		<meta property="og:image" content="https://ameerdotexe.github.io/Roblokis/images/icons/icon_300x300.png">
+		<meta property="og:image:width" content="300" />
+		<meta property="og:image:height" content="300" />
+
+		<div itemscope="" itemid="" itemtype="http://schema.org/MediaObject">
+		    <link itemprop="url" href="https://chrome.google.com/webstore/detail/roblokis/olofnhaecbnacbmgcknhcnacnffepkij?hl=en">
+		    <meta itemprop="name" content="John Denver - Take Me Home, Country Roads (Audio)">
+		    <meta itemprop="description" content="Roblokis is a chrome extension to make roblox better">
+		    <span itemprop="author" itemscope="" itemtype="http://schema.org/Person">
+		        <link itemprop="url" href="http://www.youtube.com/user/JohnDenverVEVO">
+		        <link itemprop="name" content="JohnDenverVEVO">
+		    </span>
+		    <link itemprop="thumbnailUrl" href="https://ameerdotexe.github.io/Roblokis/images/icons/icon_300x300.png">
+		    <span itemprop="thumbnail" itemscope="" itemtype="http://schema.org/ImageObject">
+		        <link itemprop="url" href="https://ameerdotexe.github.io/Roblokis/images/icons/icon_300x300.png">
+		        <meta itemprop="width" content="1280">
+		        <meta itemprop="height" content="720">
+		    </span>
+		    <link itemprop="embedUrl" href="https://ameerdotexe.github.io/Roblokis">
+		    <meta itemprop="playerType" content="HTML5 Flash">
+		    <meta itemprop="width" content="1280">
+		    <meta itemprop="height" content="720">
+		</div>
 
 		<style type="text/css">
 			body {
