--- a/faq/index.html
+++ b/faq/index.html
@@ -96,7 +96,7 @@
 			<div class="panel">
 				<div style="font-size: 140%;text-decoration: underline;">Sorry</div>
 				<div>
-					I haven't recieve a question yet (:
+					I haven't recieve any questions yet (:
 				</div>
 			</div>
 		</div>
