--- a/privacy/index.html
+++ b/privacy/index.html
@@ -3,6 +3,31 @@
 		<title>Privacy Policy - Roblokis</title>
 		<link rel="shortcut icon" type="image/jpg" href="../images/icons/icon_300x300.png"/>
 
+		<meta property="og:site_name" content="Roblokis" />
+		<meta name="twitter:site" content="Roblokis">
+
+		<meta property="og:type" content="website">
+		<meta name="keywords" content="Roblokis, Roblox Extension, New Roblox Extension">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+		<meta name="author" content="Ameer!">
+		<meta name="theme-color" content="rgb(255,64,64)">
+
+		<meta property="og:title" content="Privacy Policy | Roblokis">
+		<meta name="twitter:title" content="Privacy Policy | Roblokis">
+
+		<meta name="description" content="Click to see how Roblokis Uses your Data. (Safe)">
+		<meta property="og:description" content="Click to see how Roblokis Uses your Data. (Safe)">
+		<meta name="twitter:description" content="Click to see how Roblokis Uses your Data. (Safe)">
+
+		<meta property="og:image" content="https://ameerdotexe.github.io/Roblokis/images/icons/icon_300x300.png">
+		<meta property="og:image:width" content="300" />
+		<meta property="og:image:height" content="300" />
+
+		<meta name="twitter:image" content="https://ameerdotexe.github.io/Roblokis/images/icons/icon_300x300.png">
+		<meta name="twitter:image:width" content="300" />
+		<meta name="twitter:image:height" content="300" />
+
 		<style type="text/css">
 			body {
 				background-color: lightblue;
@@ -142,7 +167,8 @@
 			<div class="panel">
 				<div style="font-size: 140%;text-decoration: underline;">Permissions</div>
 				<div>
-					Robloxkis needs access to the roblox.com website to modify the website. Without access to the website features and themes won't work.
+					Roblokis needs access to the roblox.com website to modify the website.<br>
+					Without access to the website features and themes won't work.
 				</div>
 			</div>
 		</div>
