--- a/privacy/index.html
+++ b/privacy/index.html
@@ -171,6 +171,14 @@
 					Without access to the website features and themes won't work.
 				</div>
 			</div>
+
+			<div class="panel">
+				<div style="font-size: 140%;text-decoration: underline;">Open-Source</div>
+				<div>
+					People trust open-source projects over closed-source, so i made it open-source
+					<a href="https://github.com/AmeerDotEXE/roblokis/tree/release">Click Here</a> for Source Code.
+				</div>
+			</div>
 		</div>
 	</body>
 </html>
