--- a/privacy/index.html
+++ b/privacy/index.html
@@ -175,8 +175,9 @@
 			<div class="panel">
 				<div style="font-size: 140%;text-decoration: underline;">Open-Source</div>
 				<div>
-					People trust open-source projects over closed-source, so i made it open-source
-					<a href="https://github.com/AmeerDotEXE/roblokis/tree/release">Click Here</a> for Source Code.
+					People trust open-source projects over closed-source, so i made it open-source.<br>
+					<a href="https://github.com/AmeerDotEXE/roblokis/tree/release">Click Here</a> for Source Code.<br>
+					you can also suggest me stuff there...
 				</div>
 			</div>
 		</div>
