--- a/faq/index.html
+++ b/faq/index.html
@@ -94,9 +94,55 @@
 			</div>
 
 			<div class="panel">
-				<div style="font-size: 140%;text-decoration: underline;">Sorry</div>
+				<div style="font-size: 140%;text-decoration: underline;">
+					My question is not listed here.
+				</div>
 				<div>
-					I haven't recieve any questions yet (:
+					You can ask me on Discord or Roblox, contact links in home page!
+				</div>
+			</div>
+
+			<div class="panel">
+				<div style="font-size: 140%;text-decoration: underline;">
+					I convert my picture to .ROBLOKIS file but it didn't work?
+				</div>
+				<div>
+					You can't convert images to .ROBLOKIS files, .ROBLOKIS files are for importing themes!
+				</div>
+			</div>
+
+			<div class="panel">
+				<div style="font-size: 140%;text-decoration: underline;">
+					How to put a gif/image from internet in roblokis theme?
+				</div>
+				<div>
+					1: Open roblokis settings menu<br>
+					2: Go to designer<br>
+					3: Create a theme<br>
+					4: Click edit<br>
+					5: Click the thing you want to make a gif/image<br>
+					6: Where it says link, put The link of the website (look below)<br>
+					(by <a href="http://linktr.ee/masteryusuf">PotatoMaster Yusuf#9547</a>)
+				</div>
+			</div>
+
+			<div class="panel">
+				<div style="font-size: 140%;text-decoration: underline;">
+					How to get gif/image link from internet?
+				</div>
+				<div>
+					1: Find the gif/image on the internet (ex. google)<br>
+					2: Right click on it and click open image in new tab (optional)<br>
+					3: Click "Copy image link".
+				</div>
+			</div>
+
+			<div class="panel">
+				<div style="font-size: 140%;text-decoration: underline;">
+					Where can i find a Pre-made Roblokis Theme?
+				</div>
+				<div>
+					We have a Theme Sharing channel in our discord server, link in home page!
 				</div>
 			</div>
 		</div>
