--- a/faq/index.html
+++ b/faq/index.html
@@ -121,7 +121,7 @@
 					3: Create a theme<br>
 					4: Click edit<br>
 					5: Click the thing you want to make a gif/image<br>
-					6: Where it says link, put The link of the website (look below)<br>
+					6: Where it says link, put The link of the gif/image (look below)<br>
 					(by <a href="http://linktr.ee/masteryusuf">PotatoMaster Yusuf#9547</a>)
 				</div>
 			</div>
