--- a/index.html
+++ b/index.html
@@ -119,29 +119,49 @@
 			</div>
 
 			<div class="panel">
-				<div>What is Roblokis?</div>
-				<div>Roblokis is a chrome extension to customize your roblox website with designs and features.</div>
+				<div style="font-size: 140%;text-decoration: underline;">
+					What is Roblokis?
+				</div>
+				<div>
+					Roblokis is a chrome extension to customize your roblox website with designs and features.
+				</div>
 			</div>
 
 			<div class="panel">
-				<div>Is it Safe?</div>
-				<div>Short answer is yes, <a href="./privacy/">Click here</a> for Privacy Policy.</div>
+				<div style="font-size: 140%;text-decoration: underline;">
+					Is it Safe?
+				</div>
+				<div>
+					Short answer is yes, <a href="./privacy/">Click here</a> for Privacy Policy.
+				</div>
 			</div>
 
 			<div class="panel">
-				<div>Frequently Asked Questions</div>
-				<div><a href="./faq/">Click Here</a> for answers.</div>
+				<div style="font-size: 140%;text-decoration: underline;">
+					Frequently Asked Questions
+				</div>
+				<div>
+					<a href="./faq/">Click Here</a> for answers.
+				</div>
 			</div>
 
 			<div class="panel">
-				<div>Is it Open Source</div>
-				<div>yes, <a href="https://github.com/AmeerDotEXE/roblokis/tree/release">Click Here</a> to view it.</div>
+				<div style="font-size: 140%;text-decoration: underline;">
+					Is it Open Source
+				</div>
+				<div>
+					Yes, <a href="https://github.com/AmeerDotEXE/roblokis/tree/release">Click Here</a> to view it.
+				</div>
 			</div>
 
 			<div class="panel">
-				<div>I need Help!</div>
-				<div>you can contact me from <a href="https://discord.gg/esMtQ9Q3FF">my discord server</a>.</div>
-				<div>or contact me on <a href="https://www.roblox.com/users/678363483/profile">Roblox (Ameer_Khalid)</a>.</div>
+				<div style="font-size: 140%;text-decoration: underline;">
+					I need Help! (Contact)
+				</div>
+				<div>
+					You can contact me from <a href="https://discord.gg/esMtQ9Q3FF">my Discord server</a>.<br>
+					or contact me on <a href="https://www.roblox.com/messages/compose?recipientId=678363483">Roblox (Ameer_Khalid)</a>.
+				</div>
 			</div>
 		</div>
 	</body>
