--- a/faq/index.html
+++ b/faq/index.html
@@ -119,6 +119,7 @@
 					1: Open roblokis settings menu<br>
 					2: Go to designer<br>
 					3: Create a theme<br>
+					- Input a name (must be more then 3 characters)
 					4: Click edit<br>
 					5: Click the thing you want to make a gif/image<br>
 					6: Where it says link, put The link of the gif/image (look below)<br>
@@ -139,9 +140,16 @@
 
 			<div class="panel">
 				<div style="font-size: 140%;text-decoration: underline;">
-					Where can i find a Pre-made Roblokis Theme?
+					How to use Pre-made Roblokis Themes?
 				</div>
 				<div>
+					1: Open roblokis settings menu<br>
+					2: Go to designer<br>
+					3: Create a theme<br>
+					- Name and description are optional (will be set as the pre-made theme name)<br>
+					4: Click import then select the .Roblokis File<br>
+					5: Click Create then you should be able to select it.<br><br>
+					
 					We have a Theme Sharing channel in our discord server, link in home page!
 				</div>
 			</div>
