--- a/faq/index.html
+++ b/faq/index.html
@@ -134,7 +134,7 @@
 				<div>
 					1: Find the gif/image on the internet (ex. google)<br>
 					2: Right click on it and click open image in new tab (optional)<br>
-					3: Click "Copy image link".
+					3: Right click it then click "Copy image link".
 				</div>
 			</div>
 
