--- a/themes/top/index.html
+++ b/themes/top/index.html
@@ -16,9 +16,9 @@
 		<meta property="og:title" content="Top Themes for Roblokis">
 		<meta name="twitter:title" content="Top Themes for Roblokis">
 
-		<meta name="description" content="Top 10 Roblokis Themes for Roblox">
-		<meta property="og:description" content="Top 10 Roblokis Themes for Roblox">
-		<meta name="twitter:description" content="Top 10 Roblokis Themes for Roblox">
+		<meta name="description" content="Top Roblokis Themes for Roblox">
+		<meta property="og:description" content="Top Roblokis Themes for Roblox">
+		<meta name="twitter:description" content="Top Roblokis Themes for Roblox">
 
 		<meta property="og:image" content="https://ameerdotexe.github.io/Roblokis/images/icons/icon_300x300.png">
 		<meta property="og:image:width" content="300" />
