--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 		<meta property="og:description" content="Roblokis is a chrome extension to make roblox better">
 		<meta name="twitter:description" content="Roblokis is a chrome extension to make roblox better">
 
-		<meta property="og:image" content="https://ameerdotexe.github.io/Roblokis/images/icons/icon_300x300.png">
+		<meta property="og:image" content="https://ameerdotexe.github.io/roblokis/images/icons/icon_300x300.png">
 		<meta property="og:image:width" content="300" />
 		<meta property="og:image:height" content="300" />
 
-		<meta name="twitter:image" content="https://ameerdotexe.github.io/Roblokis/images/icons/icon_300x300.png">
+		<meta name="twitter:image" content="https://ameerdotexe.github.io/roblokis/images/icons/icon_300x300.png">
 		<meta name="twitter:image:width" content="300" />
 		<meta name="twitter:image:height" content="300" />
 
@@ -160,7 +160,8 @@
 				</div>
 				<div>
 					You can contact me from <a href="https://discord.gg/esMtQ9Q3FF">my Discord server</a>.<br>
-					or contact me on <a href="https://www.roblox.com/messages/compose?recipientId=678363483">Roblox (Ameer_Khalid)</a>.
+					or contact me on <a href="https://www.roblox.com/messages/compose?recipientId=678363483">Roblox (Ameer_Khalid)</a>.<br>
+					maybe try emailing me (ameerkhalid193+roblokis@gmail.com)
 				</div>
 			</div>
 		</div>
