--- a/index.html
+++ b/index.html
@@ -144,6 +144,15 @@
 					<a href="./faq/">Click Here</a> for answers.
 				</div>
 			</div>
+			
+			<div class="panel">
+				<div style="font-size: 140%;text-decoration: underline;">
+					Want some Pre-made Themes?
+				</div>
+				<div>
+					<a href="./themes/top/">Click Here</a> for Pre-made Themes.
+				</div>
+			</div>
 
 			<div class="panel">
 				<div style="font-size: 140%;text-decoration: underline;">
