--- a/faq/index.html
+++ b/faq/index.html
@@ -150,7 +150,7 @@
 					4: Click import then select the .Roblokis File<br>
 					5: Click Create then you should be able to select it.<br><br>
 					
-					We have a Theme Sharing channel in our discord server, link in home page!
+					<a href="themes/top/">Click Here for Some Pre-made Themes</a>
 				</div>
 			</div>
 		</div>
