added themes button

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 			
 			<div class="panel">
 				<div style="font-size: 140%;text-decoration: underline;">
-					Want some Pre-made Themes?
+					Want themes created by people?
 				</div>
 				<div>
 					<a href="./themes/top/">Click Here</a> for Pre-made Themes.
