--- a/404.html
+++ b/404.html
@@ -94,7 +94,7 @@
 
       <div class="panel">
         <div>404 Error</div>
-        <div>This Page Doesn't Exist :b</div>
+        <div>This Page Doesn't Exist :b <a href="https://ameerdotexe.github.io/roblokis/">Go Back?</a></div>
       </div>
     </div>
   </body>
