--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 					I need Help! (Contact)
 				</div>
 				<div>
-					You can contact me from <a href="https://discord.gg/esMtQ9Q3FF">my Discord server</a>.<br>
+					You can contact me from <a href="https://discord.gg/uH47YYKEex">my Discord server</a>.<br>
 					or contact me on <a href="https://www.roblox.com/messages/compose?recipientId=678363483">Roblox (Ameer_Khalid)</a>.<br>
 					maybe try emailing me (ameerkhalid193+roblokis@gmail.com)
 				</div>
