--- a/roblokis/html/Popup/Popup.html
+++ b/roblokis/html/Popup/Popup.html
@@ -67,6 +67,8 @@
 				<div class="newupdt1">Please Reinstall the extension.</div>
 			</div>
 		</div>
+		<!-- TODO Manual restart btn -->>
+		<!-- TODO Manual update check btn -->>
 		<script src="./Popup.js"></script>
 	</body>
 
