first step to cross-browser support

--- a/roblokis/html/Popup/Popup.html
+++ b/roblokis/html/Popup/Popup.html
@@ -61,14 +61,14 @@
 
 	<body id="popup-body">
 		<div class="list">
-			<a href="https://www.Roblox.com/discover/?open=roblokis" target="_blank" class="stngs">Open Settings</a>
+			<a href="https://www.Roblox.com/discover/?open=roblokis" target="_blank" id="settings-btn">Open Settings</a>
 			<div id="update-text">
-				<div class="newupdt">There is a New Update!</div>
-				<div class="newupdt1">Please Reinstall the extension.</div>
+				<div id="newupdt">There is a New Update!</div>
+				<div id="newupdt1">Please Reinstall the extension.</div>
 			</div>
 		</div>
-		<!-- TODO Manual restart btn -->>
-		<!-- TODO Manual update check btn -->>
+		<!-- TODO Manual restart btn -->
+		<!-- TODO Manual update check btn -->
 		<script src="./Popup.js"></script>
 	</body>
 
