fixed roblox update breaking theme

--- a/roblokis/html/Popup/Popup.html
+++ b/roblokis/html/Popup/Popup.html
@@ -61,7 +61,7 @@
 
 	<body id="popup-body">
 		<div class="list">
-			<a href="https://www.Roblox.com/discover/?open=roblokis" target="_blank" id="settings-btn">Open Settings</a>
+			<a href="https://www.Roblox.com/charts/?open=roblokis" target="_blank" id="settings-btn">Open Settings</a>
 			<div id="update-text">
 				<div id="newupdt">There is a New Update!</div>
 				<div id="newupdt1">Please Reinstall the extension.</div>
