--- a/privacy/index.html
+++ b/privacy/index.html
@@ -30,9 +30,9 @@
 
 		<style type="text/css">
 			body {
-				background-color: lightblue;
-				background: -webkit-linear-gradient(45deg, rgba(9,9,121,1) 0%, rgba(0,212,255,1) 90%);
-				background: linear-gradient(45deg, rgba(9,9,121,1) 0%, rgba(0,212,255,1) 90%);
+				background-color: hsl(0 74.7% 15.5%);
+				background: -webkit-linear-gradient(45deg, hsl(0 74.7% 15.5%) 0%, hsl(0 62.8% 30.6%) 90%);
+				background: linear-gradient(45deg, hsl(0 74.7% 15.5%) 0%, hsl(0 62.8% 30.6%) 90%);
 			}
 
 			div {
@@ -45,7 +45,7 @@
 
 			a {
 				text-decoration: none;
-				color: grey;
+				color: hsl(213.1 93.9% 67.8%);
 			}
 
 
@@ -69,7 +69,7 @@
 			}
 
 			.downloadbtn {
-				background-color: rgba(255,255,255,0.3);
+				background-color: hsl(0 0% 14.9%);
 				width: fit-content;
 				height: 40px;
 				padding: 8px;
@@ -77,7 +77,6 @@
 				display: flex;
 				align-items: center;
 				box-shadow: 0px 4px 16px 0px black;
-				color: rgb(222, 0, 0);
 			}
 
 			.downloadbtn * {
@@ -100,13 +99,19 @@
 			}
 
 			#content .panel {
-				background-color: rgba(0,0,0,0.3);
+				background-color: hsl(0 0% 9%);
 				border-radius: 20px;
 				padding: 20px;
 				margin-top: 3%;
 				width: calc(60% + 20px);
 				box-shadow: 0px 4px 16px 0px black;
-				color: white;
+				color: hsl(0 0% 63.9%);
+			}
+
+			#content .panel > div:first-child {
+				font-size: 140%;
+				margin-bottom: 0.25rem;
+				color: hsl(0 0% 98%);
 			}
 		</style>
 	</head>
@@ -114,12 +119,12 @@
 		<div id="content">
 			<div class="downloadbtn">
 				<div class="gap"></div>
-				<a class="header" style="color: black;pointer-events: visible;" href="../">Go Home</a>
+				<a class="header" style="color: white;pointer-events: visible;" href="../">Go Home</a>
 				<div class="gap"></div>
 			</div>
 
 			<div class="panel">
-				<div style="font-size: 140%;text-decoration: underline;">Data Storage</div>
+				<div>Data Storage</div>
 				<div>
 					Nothing is saved on the extension, so removing the extension won't remove your data. But reinstalling the browser will remove the data.<br>
 					All your Roblokis data is stored at your Roblox website on the Local Storage. So your data is as safe as your Roblox token. Which shouldn't be showen to anyone!<br><br>
@@ -137,7 +142,7 @@
 			</div>
 
 			<div class="panel">
-				<div style="font-size: 140%;text-decoration: underline;">Data Usage</div>
+				<div>Data Usage</div>
 				<div>
 					Currently all data for the extension remains in Roblox website. All personal and Roblox data is kept inside the site and is not sent outside of Roblox.<br><br>
 
@@ -165,15 +170,18 @@
 			</div>
 
 			<div class="panel">
-				<div style="font-size: 140%;text-decoration: underline;">Permissions</div>
+				<div>Permissions</div>
 				<div>
 					Roblokis needs access to the roblox.com website to modify the website.<br>
-					Without access to the website features and themes won't work.
+					Without access to the website features and themes won't work.<br>
+					<br>
+					Other permissions like accessing other sites is not required<br>
+					but is used (when requested by the user) to retrieved image content from those sites!
 				</div>
 			</div>
 
 			<div class="panel">
-				<div style="font-size: 140%;text-decoration: underline;">Open-Source</div>
+				<div>Open-Source</div>
 				<div>
 					People trust open-source projects over closed-source, so i made it open-source.<br>
 					<a href="https://github.com/AmeerDotEXE/roblokis/tree/release">Click Here</a> for Source Code.<br>
